fix width and spacing issues

--- a/assets/css/global.styl
+++ b/assets/css/global.styl
@@ -69,8 +69,8 @@ table.layout
 #maqam_section
     pad()
     display inline-block
-    width 500px
-    margin-left 50px
+    width 300px
+    margin-left 10px
 
 #error_box
     border 2px solid red
