--- a/assets/css/keyboard.styl
+++ b/assets/css/keyboard.styl
@@ -1,14 +1,4 @@
 @import 'nib'
-.octave
-    display inline-block
-    padding 6px 4px
-    margin 0 
-    border-top 1px solid hsl(0, 0%, 48%)
-
-.octave.alt
-    background-color hsl(0, 0%, 99%)
-    border-top-width 3px
-    padding-top 4px
 
 transition()
     vendor('transition', arguments)
@@ -22,8 +12,8 @@ btn_highlight(color)
     background-color color
 
 #keys
-    margin 10px 30px
-    min-width 400px
+    margin 10px 8px
+    min-width 460px
     *
         user-select none
     .row
