--- a/assets/css/maqam.styl
+++ b/assets/css/maqam.styl
@@ -21,7 +21,7 @@ input#scale
             margin 4px
 
     #presets
-        margin 12px 20px
+        margin 12px 7px
 
     input[type=text]
         border-radius 100px
